# chile-economic-indexes-cli

./: .gitattributes  .gitignore  .goreleaser.yaml  .goreleaser.yml  CLAUDE.md  Makefile  README.md  bcch.tape  cli.go  cli_test.go  command_exit.go  command_get.go  command_help.go  command_login.go  command_search.go  command_setcredentials.go  completion.bash  completion.zsh  go.mod  local.go  main.go
.claude/: playwright-mcp-config.json
.claude/agents/: viz-reviewer.md  viz.md
.claude/commands/: align-page-style.md  viz-design.md
.claude/context/: content-curation-guide.md  design-principles.md  style-guide.md  viz-examples.md  viz-knowledge-base.md  viz-python-static.md
.claude/prompts/: data-to-viz-best-practices.md
.github/workflows/: release.yml  tests.yml
bcch/: main.go
bcch/cmd/: completion.go  root.go  search.go  setcredentials.go  version.go  viz.go
bcch/public/: index.html  main.js  styles.css
bcch/python/: README.md  generate_charts.py  pyproject.toml
bcch/python/charts/: __init__.py  cpi.py  exchange.py  unemployment.py
cmd/: get.go  root.go  search.go  setcredentials.go
cmd/bcch/: main.go
cmd/bcchcrawler/: configure.go  crawlserie.go  main.go
cmd/bcchfetch/: configure.go  crawlserie.go  main.go
cmd/crawler/: configure.go  crawlserie.go  main.go
cmd/fileserver/: main.go
internal/bcch-api/: authconfig.go  bcchapi.go  client.go  json.go  series_req.go  types_series.go
internal/bcch-cache/: cache.go  cache_test.go
internal/fileio/: json.go
internal/spinner/: spinner.go
public/: index.html  main.js  styles.css
(+6 files in other folders)
